SERVER-16569 do not update the replication progress map when receiving a heartbeat from primary